dodata matematika i neka custom raspodela za dobitak

--- a/src/index.css
+++ b/src/index.css
@@ -14,3 +14,9 @@
 .reel-spin {
   animation: spin var(--duration, 0.8s) ease-out forwards;
 }
+
+body {
+  background-image: url("src/assets/images/background.jpg");
+  background-size: cover;
+  background-position: center;
+}
