--- a/src/index.css
+++ b/src/index.css
@@ -34,7 +34,7 @@
 }
 
 body {
-  background-image: url("src/assets/images/background.jpg");
+  background-image: url("images/background.jpg");
   background-size: cover;
   background-position: center;
 }
