--- a/src/index.css
+++ b/src/index.css
@@ -33,8 +33,8 @@
   animation: spin var(--duration, 0.8s) ease-out forwards;
 }
 
-body {
+/* body {
   background-image: url("images/background.jpg");
   background-size: cover;
   background-position: center;
-}
+} */
